[tool.poetry]
name = "ai-knowledge-graph-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.30.5"
graphdatascience = "^1.10"
retry = "0.9.2"
langchain = ">=0.0.216"
streamlit = "1.23.1"
streamlit-chat = "0.0.2.2"
streamlit-chat-media = "0.0.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly = "5.15.0"
altair = "<5"
python-dotenv = "1.0.0"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
